--- a/hsf/index.html
+++ b/hsf/index.html
@@ -66,8 +66,8 @@
 
  
            <div align="center">
-           <a class="button" href="https://cjewz.com/pl?o=2b1b8c6c062d43c65380a9d5c4c6fcf1:1d759c44ef94fa68248af0e6a2805a34">Watch Now</a>
-           <a class="button" href="https://cjewz.com/pl?o=2b1b8c6c062d43c65380a9d5c4c6fcf1:1d759c44ef94fa68248af0e6a2805a34">Free Trial</a>
+           <a class="button" href="https://affcpatrk.com/link?id=64a8c7de1b20fd67e18ba3db">Watch Now</a>
+           <a class="button" href="https://affcpatrk.com/link?id=64a8c7de1b20fd67e18ba3db">Free Trial</a>
 
 
             <p></p>
