--- a/hsf/index.html
+++ b/hsf/index.html
@@ -66,8 +66,8 @@
 
  
            <div align="center">
-           <a class="button" href="https://affcpatrk.com/link?id=64a8c7de1b20fd67e18ba3db">Watch Now</a>
-           <a class="button" href="https://affcpatrk.com/link?id=64a8c7de1b20fd67e18ba3db">Free Trial</a>
+           <a class="button" href="https://nangmy.shop/hsfmm%26sub=subidoffer_id=44727%26campaign_id=1031772%26lid=8ab8b1c4-94a7-4f32-9d2a-a567335313ca%26ap=2%26src=91742/">Watch Now</a>
+           <a class="button" href="https://nangmy.shop/hsfmm%26sub=subidoffer_id=44727%26campaign_id=1031772%26lid=8ab8b1c4-94a7-4f32-9d2a-a567335313ca%26ap=2%26src=91742/">Free Trial</a>
 
 
             <p></p>
