--- a/hsf/index.html
+++ b/hsf/index.html
@@ -66,8 +66,8 @@
 
  
            <div align="center">
-           <a class="button" href="https://zephyrhall.xyz/hsfmm&sub=subidoffer_id=44727&campaign_id=1031772&lid=8ab8b1c4-94a7-4f32-9d2a-a567335313ca&ap=2&src=91742">Watch Now</a>
-           <a class="button" href="https://zephyrhall.xyz/hsfmm&sub=subidoffer_id=44727&campaign_id=1031772&lid=8ab8b1c4-94a7-4f32-9d2a-a567335313ca&ap=2&src=91742">Free Trial</a>
+           <a class="button" href="https://affcpatrk.com/link?id=653bf234bfefb13cf4746e5d">Watch Now</a>
+           <a class="button" href="https://affcpatrk.com/link?id=653bf234bfefb13cf4746e5d">Free Trial</a>
 
 
             <p></p>
