--- a/hsf/index.html
+++ b/hsf/index.html
@@ -66,8 +66,8 @@
 
  
            <div align="center">
-           <a class="button" href="https://affcpatrk.com/link?id=653bf234bfefb13cf4746e5d">Watch Now</a>
-           <a class="button" href="https://affcpatrk.com/link?id=653bf234bfefb13cf4746e5d">Free Trial</a>
+           <a class="button" href="http://track.affsun.com/go_smart?group_id=8&aff_id=190">Watch Now</a>
+           <a class="button" href="http://track.affsun.com/go_smart?group_id=8&aff_id=190">Free Trial</a>
 
 
             <p></p>
